--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css')}}">
-    <link rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap/css/bootstrap-theme.min.css')}}">
-    <script type="text/javascript" href="{{url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js')}}"></script>
+    <link rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css')}}"/>
+    <link rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap/css/bootstrap-theme.min.css')}}"/>
+    <script type="text/javascript" src="{{url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js')}}"></script>
 
-    <script type="text/javascript" href="{{url_for('static', filename='vendor/jquery/jquery-2.1.1.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='vendor/jquery/jquery-2.1.1.min.js')}}"></script>
 
     {% block head %}
     {% endblock %}
