--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@ Home
 {% endblock %}
 
 {% block head %}
+<script type="text/javascript" src="{{url_for('static', filename='js/index.js')}}"></script>
 {% endblock %}
 
 {% block content %}
